[gd_scene load_steps=14 format=2]

[ext_resource path="res://textures/robits/drone_still.png" type="Texture" id=1]
[ext_resource path="res://textures/robits/drone_move_one.png" type="Texture" id=2]
[ext_resource path="res://scenes/Drone.gd" type="Script" id=3]
[ext_resource path="res://textures/status/gather_two.png" type="Texture" id=4]
[ext_resource path="res://textures/status/gather_three.png" type="Texture" id=5]
[ext_resource path="res://textures/status/gather_one.png" type="Texture" id=6]
[ext_resource path="res://textures/status/repair_frame_one.png" type="Texture" id=7]
[ext_resource path="res://textures/status/repair_frame_two.png" type="Texture" id=8]
[ext_resource path="res://textures/status/repair_frame_three.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[node name="Drone" type="Node2D"]
script = ExtResource( 3 )

[node name="Selected" type="ColorRect" parent="."]
visible = false
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
color = Color( 0, 1, 0.0117647, 0.498039 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="RepairStatus" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -26 )
frames = SubResource( 2 )
playing = true

[node name="GatherStatus" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -26 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
